@startuml

title __DOLPHINACOUSTICSDATAEXTRACTION's Class Diagram__\n

  namespace MyCode {
    class MyCode.Main {
    }
  }
  

  namespace MyCode {
    class MyCode.TextFileDetails {
    }
  }
  

  namespace MyCode {
    class MyCode.WavHandler {
    }
  }
  

  namespace WavFile {
    class WavFile.ReadExample {
    }
  }
  

  namespace WavFile {
    class WavFile.WavFile {
    }
  }
  

  namespace WavFile {
    class WavFile.WavFileException {
    }
  }
  

  namespace WavFile {
    class WavFile.WriteExample {
    }
  }
  

  namespace tonals {
    class tonals.TonalBinaryInputStream {
    }
  }
  

  namespace tonals {
    class tonals.TonalBinaryOutputStream {
    }
  }
  

  namespace tonals {
    class tonals.TonalHeader {
    }
  }
  

  namespace tonals {
    class tonals.tfnode {
    }
  }
  

  namespace tonals {
    class tonals.tonal {
    }
  }
  

  namespace tonals {
    class tonals.tonalSortByTime {
    }
  }
  

  MyCode.WavHandler o-- WavFile.WavFile : wavFile
  WavFile.WavFile o-- WavFile.WavFile.IOState : ioState
  tonals.TonalBinaryInputStream o-- tonals.TonalHeader : hdr
  tonals.TonalBinaryOutputStream o-- tonals.TonalHeader : hdr
  tonals.tfnode .up.|> java.io.Serializable
  tonals.tfnode .up.|> java.lang.Comparable
  tonals.tfnode o-- tonals.tfnode : next_free
  tonals.tfnode o-- tonals.tfnode : set_root
  tonals.tonal .up.|> java.lang.Comparable
  tonals.tonal -up-|> java.util.LinkedList
  tonals.tonalSortByTime .up.|> java.util.Comparator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
